# cuda-playground

./: .gitignore
examples/add_numbers/: BUILD.bazel  add_numbers.cu  add_numbers.h  main.cc
examples/add_numbers/test/: BUILD.bazel  add_numbers.cu  add_numbers.cuh  add_numbers_tests.cc
examples/closest_neighbor/: BUILD.bazel  closest_neighbor.cu  closest_neighbor.h  launch.cu  launch.h  main.cc
examples/jacobi_method/: BUILD.bazel  jacobi.cu  jacobi.h  launch.cu  launch.h  main.cc  utils.cu  utils.h
examples/jacobi_method/1d_grid/: BUILD.bazel  jacobi.cu  jacobi.h  jacobi_with_shared_memory.cpp  launch.cu  launch.h  main.cpp
examples/jacobi_method/cpu/: main.cpp
examples/jacobi_method/test/: BUILD.bazel  launch_test.cu  launch_test.cuh  test.cc
examples/jacobi_method/tiling/: BUILD.bazel  jacobi.cu  jacobi.h  launch.cu  launch.h  main.cpp
examples/matrix_multiplication/: BUILD.bazel  launch.cu  launch.h  main.cc  matrix_multiplication.cu  matrix_multiplication.h  utils.cc  utils.cu  utils.h
examples/matrix_multiplication/test/: BUILD.bazel  launch_test.cu  launch_test.cuh  test.cc
examples/separate_kernel_host_functions/: BUILD.bazel  add_arrays.cu  add_arrays.h  launch.cc  launch.h  main.cc
examples/shared_memory/: BUILD.bazel  closest_neighbor.cu  closest_neighbor.h  launch.cu  launch.h  main.cc  main.cu
examples/shared_memory/test/: BUILD.bazel  launch_test.cu  launch_test.cuh
examples/threads_blocks_and_grids/: add_arrays.cu  add_arrays.h  launch.cc  launch.h  main.cc
