load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_binary", "cuda_library")

cc_library(
    name = "matrix_utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    visibility = ["//visibility:public"],
)

cuda_library(
    name = "matrix_multiplication_kernel",
    srcs = ["matrix_multiplication.cu"],
    hdrs = ["matrix_multiplication.h"],
    visibility = ["//visibility:public"],
)

cuda_library(
    name = "matrix_multiplication_lib",
    srcs = ["launch.cu"],
    hdrs = ["launch.h"],
    visibility = ["//visibility:public"],
    deps = [":matrix_multiplication_kernel"],
)

cuda_binary(
    name = "matrix_multiplication_bin",
    srcs = ["main.cu"],
    visibility = ["//visibility:public"],
    deps = [":matrix_multiplication_lib"],
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [":matrix_multiplication_lib"],
)
