load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
    name = "launch_main",
    srcs = ["launch_test.cu"],
    hdrs = ["launch_test.cuh"],
    deps = ["//examples/shared_memory:closest_neighbor_lib"],
)

cc_test(
    name = "shared_memory_tests",
    srcs = ["test.cc"],
    deps = [
        ":launch_main",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
